@@ -1,6 +1,5 @@
 package kernel.jdon.moduleapi.domain.auth.util;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.util.Base64;
@@ -22,82 +21,77 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 public class CryptoManager {
 
-	private final String iv = SecretKeyConstants.AES_PRIVATE_KEY;
-	private final String secretKey = SecretKeyConstants.HMAC_PRIVATE_KEY;
+    private final CryptoProperties cryptoProperties;
 
-	public String encryptAESCBC(String message) throws Exception {
-		Cipher cipher = getCipher(Cipher.ENCRYPT_MODE);
-		byte[] encrypted = cipher.doFinal(message.getBytes(StandardCharsets.UTF_8));
+    public String encryptAESCBC(final String message) throws Exception {
+        final Cipher cipher = getCipher(Cipher.ENCRYPT_MODE);
+        final byte[] encrypted = cipher.doFinal(message.getBytes(StandardCharsets.UTF_8));
 
-		return Base64.getEncoder().encodeToString(encrypted);
-	}
+        return Base64.getEncoder().encodeToString(encrypted);
+    }
 
-	public String decryptAESCBC(String message) throws Exception {
-		Cipher cipher = getCipher(Cipher.DECRYPT_MODE);
-		byte[] decrypted = cipher.doFinal(Base64.getDecoder().decode(message));
+    public String decryptAESCBC(final String message) throws Exception {
+        final Cipher cipher = getCipher(Cipher.DECRYPT_MODE);
+        final byte[] decrypted = cipher.doFinal(Base64.getDecoder().decode(message));
 
-		return new String(decrypted);
-	}
+        return new String(decrypted);
+    }
 
-	private Cipher getCipher(int mode) throws Exception {
-		SecretKeySpec secretKey = new SecretKeySpec(iv.getBytes(StandardCharsets.UTF_8), "AES");
-		IvParameterSpec IV = new IvParameterSpec(iv.substring(0, 16).getBytes());
+    private Cipher getCipher(final int mode) throws Exception {
+        final SecretKeySpec secretKey = new SecretKeySpec(
+            cryptoProperties.getAesPrivateKeyByByte(), cryptoProperties.getCryptoAlgorithm());
+        final IvParameterSpec IV = new IvParameterSpec(cryptoProperties.getAesPrivateKeyByByte());
+        final Cipher cipher = Cipher.getInstance(cryptoProperties.getCryptoTransformation());
+        cipher.init(mode, secretKey, IV);
 
-		Cipher cipher = Cipher.getInstance("AES/CBC/PKCS5Padding");
-		cipher.init(mode, secretKey, IV);
+        return cipher;
+    }
 
-		return cipher;
-	}
+    public String generateHMAC(final String data) throws Exception {
+        final Mac hmac = Mac.getInstance(cryptoProperties.getMacAlgorithm());
+        final SecretKeySpec secretKeySpec = new SecretKeySpec(
+            cryptoProperties.getHmacPrivateKeyByByte(), cryptoProperties.getMacAlgorithm());
+        hmac.init(secretKeySpec);
+        final byte[] hmacBytes = hmac.doFinal(data.getBytes(StandardCharsets.UTF_8));
 
-	public String generateHMAC(String data) throws Exception {
-		Mac hmac = Mac.getInstance("HmacSHA256");
-		SecretKeySpec secretKeySpec = new SecretKeySpec(secretKey.getBytes(StandardCharsets.UTF_8),
-			"HmacSHA256");
-		hmac.init(secretKeySpec);
-		byte[] hmacBytes = hmac.doFinal(data.getBytes(StandardCharsets.UTF_8));
+        return Base64.getEncoder().encodeToString(hmacBytes);
+    }
 
-		return Base64.getEncoder().encodeToString(hmacBytes);
-	}
+    public boolean isValidHMAC(final String receivedHMAC, final String data) throws Exception {
+        final String calculatedHMAC = generateHMAC(data);
 
-	public boolean isValidHMAC(String receivedHMAC, String data) throws Exception {
-		String calculatedHMAC = generateHMAC(data);
+        return receivedHMAC.equals(calculatedHMAC);
+    }
 
-		return receivedHMAC.equals(calculatedHMAC);
-	}
+    public Map<String, String> getUserInfoFromAuthProvider(final String hmac, final String encrypted) {
+        final String emailAndProvider = getEmailAndProviderString(hmac, encrypted);
 
-	public Map<String, String> getUserInfoFromAuthProvider(final String hmac, final String encrypted) {
-		final String emailAndProvider = getEmailAndProviderString(hmac, encrypted);
+        return parseQueryString(emailAndProvider);
+    }
 
-		return parseQueryString(emailAndProvider);
-	}
+    private String getEmailAndProviderString(final String hmac, final String encrypted) {
+        String emailAndProvider = null;
+        try {
+            if (isValidHMAC(hmac, encrypted)) {
+                emailAndProvider = decryptAESCBC(encrypted);
+            } else {
+                throw new ApiException(MemberErrorCode.UNAUTHORIZED_EMAIL_OAUTH2);
+            }
+        } catch (Exception e) {
+            throw new ApiException(MemberErrorCode.BAD_REQUEST_INVALID_ENCRYPT_STRING);
+        }
+        return emailAndProvider;
+    }
 
-	private String getEmailAndProviderString(final String hmac, final String encrypted) {
-		String emailAndProvider = null;
-		try {
-			if (isValidHMAC(hmac, encrypted)) {
-				emailAndProvider = decryptAESCBC(encrypted);
-			} else {
-				throw new ApiException(MemberErrorCode.UNAUTHORIZED_EMAIL_OAUTH2);
-			}
-		} catch (Exception e) {
-			throw new ApiException(MemberErrorCode.BAD_REQUEST_INVALID_ENCRYPT_STRING);
-		}
-		return emailAndProvider;
-	}
-
-	private Map<String, String> parseQueryString(final String queryString) {
-		final Map<String, String> params = new HashMap<>();
-		final String[] pairs = queryString.split("&");
-		try {
-			for (String pair : pairs) {
-				String[] keyValue = pair.split("=");
-				String key = URLDecoder.decode(keyValue[0], "UTF-8");
-				String value = URLDecoder.decode(keyValue[1], "UTF-8");
-				params.put(key, value);
-			}
-		} catch (UnsupportedEncodingException e) {
-			throw new ApiException(MemberErrorCode.BAD_REQUEST_FAIL_PARSE_QUERY_STRING);
-		}
-		return params;
-	}
+    private Map<String, String> parseQueryString(final String queryString) {
+        final Map<String, String> params = new HashMap<>();
+        final String[] pairs = queryString.split("&");
+        for (String pair : pairs) {
+            String[] keyValue = pair.split("=");
+            String key = URLDecoder.decode(keyValue[0], StandardCharsets.UTF_8);
+            String value = URLDecoder.decode(keyValue[1], StandardCharsets.UTF_8);
+            params.put(key, value);
+        }
+        return params;
+    }
 }
